[package]
name = "io_uring_buf_ring"
version = "0.2.1"
authors = ["Sherlock Holo <sherlockya@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Sherlock-Holo/io_uring_buf_ring"
description = "Help user create and manage io-uring buffer-ring"
keywords = ["io-uring"]
categories = ["asynchronous", "network-programming", "filesystem"]
license = "MIT"
edition = "2021"
rust-version = "1.79.0"

[features]
default = ["bytes"]
bytes = ["dep:bytes"]

[dependencies]
bytes = { version = "1.9.0", optional = true }
io-uring = "0.7.2"
rustix = { version = "1.0.7", features = ["mm"] }
